public/stylesheets/main.css
body {
	/* background-color: #221d28; */
	background-color: #211d33;
	color: #b8d7ff;
    text-transform: lowercase;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.status-bar {
    position: fixed;
    top: 0;
    left: 0;
	font-size: 2rem;
	font-weight: 600;
	color: #fbffbe;
	letter-spacing: 0rem;
	text-align: center;
	padding: 1.25rem 0 1.25rem 0;
	margin-bottom: 1rem;
    width: 100%;
    background:#2b273f;
    z-index: 998;
}

.status-bar-user {
    color: #b8d7ff;
    font-weight: 600;
    font-size: 2rem;
}

/* BUTTONS */
.primary-button {
    background-color: #9eead2;
    color: #110b1e;
    text-align: left;
}

.primary-button:hover {
    background-color: #74c4ab;
    color: #110b1e;
    text-align: left;
}

.primary-button:active {
    background-color: #6bb39c;
    color: #110b1e;
    text-align: left;
}

.btn-primary {
    background-color: #9eead2;
    color: rgb(0, 0, 0);
    border: 1px solid black;
}

.btn-primary:hover {
    background-color: #74c4ab;
    color: #000000;
    border: 1px solid black;
}

.btn-primary:active {
    background-color: #6bb39c;
    color: #000000;
    border: 1px solid black;
}

.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active {
    background-color: #6bb39c;
    color: #000000;
    border: 1px solid black;
}

.secondary-button {
    background-color: transparent;
    border-color: #9eead2;
    color: #9eead2;
}

.secondary-button:hover {
    background-color: transparent;
    border-color: #6bb39c;;
    color: #6bb39c;;
}

.secondary-button:active {
    background-color: transparent;
    border-color: #b8d8c3;
    color: #b8d8c3;
}

.data-input {
    background-color: #ffffff !important;
    cursor: pointer;
    border: 0px solid #889fd7;
    color: #000000;
}

.data-input:hover {
    background-color: #e9e9e9 !important;
    cursor: pointer;
    border: 0px solid #889fd7;
    color: #000000;
}

.data-input:active {
    background-color: #fafafa !important;
    cursor: pointer;
    border: 0px solid #889fd7;
    color: #000000;
}

input[type="radio"] {
    position: absolute;
    visibility: hidden;
}


.btn {
    font-weight: 100;
    text-align: left;
    padding: .75rem 1.5rem;
    border-radius: .4rem;
    font-size: 1rem;
    letter-spacing: 0rem;
}

.user-buttons {
    width: 100%;
}

.userA-radio {
    border-radius: .4rem 0 0 .4rem !important;
    border: solid 1px #000000;
    width: calc(100% / 2);
    white-space: nowrap;      /*keep text on one line */
    overflow: hidden;         /*prevent text from being shown outside the border */
    text-overflow: ellipsis;
}

.userB-radio {
    border-radius: 0 .4rem .4rem 0;
    border: solid 1px #000000;
    width: calc(100% / 2);
    white-space: nowrap;      /*keep text on one line */
    overflow: hidden;         /*prevent text from being shown outside the border */
    text-overflow: ellipsis;
}

#btnControlA:checked + label {
    background: #74c4ab;
}

#btnControlB:checked + label {
    background: #74c4ab;
}
/* END BUTTONS */

@media only screen and (max-width: 600px) {
    div.status-bar, .status-bar-user {
        font-size: 1.5rem;
    }
}

.heading {
	font-weight: 200;
	font-size: 1.75rem;
    margin-top: 7rem !important;
    padding-bottom: 1em;
    max-width: 90%;
}

.heading2 { /*positions columns in the same place when they are side by side*/
	font-weight: 200;
	font-size: 2rem;
	letter-spacing: 0rem;
	margin: 10rem 0 1.45rem 0;
	opacity: 0; 
}

@media only screen and (max-width: 766px) {
  div.heading2 {
    display: none;
  }
}

/* MAKES 2 COLUMNS ON IPHONE LANDSCAPE */
@media only screen 
and (min-device-width : 375px) 
and (max-device-width : 812px) 
and (-webkit-device-pixel-ratio : 3)
and (orientation : landscape) {
    .table-col {
        max-width: 50%;
    }
}

@media only screen 
and (min-device-width : 375px) 
and (max-device-width : 667px) 
and (orientation : landscape) { 
    .table-col {
        max-width: 50%;
    }
}



label {
	margin-bottom: 0;
}

a:hover {
    color: #fff;
}

.col-centered {
	float: none;
	margin: 0 auto;
}

.main-content {
    max-width: 90%;
    z-index: 1;
}

.form-group {
    margin-bottom: .5rem;
}

.form-control {
	font-weight: 400;
	text-align: left;
	padding: .75rem 1.5rem;
	border-radius: .4rem;
	font-size: 1rem;
	letter-spacing: 0rem;
}

/*.navigation {
	margin-top: 2.5rem;
}*/

.table-user {
	font-size: 1.25rem;
	padding: .2rem 0 .3rem 1rem;
	font-weight: 200;
	background-color: #2b273f;
	border-radius: .5rem;
    letter-spacing: 0rem;
    color: #fff;
}

.total-spent {
	font-size: 1.25rem;
	padding-right: .8rem;
	font-weight: 200;
	border-radius: .5rem;
	letter-spacing: 0rem;
	float: right;
}

table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 2rem !important;
}

td {
	font-size: .85rem;
    font-weight: 200;
    color: rgba(255, 255, 255, 0.623)
}

td, th {
    text-align: left;
    padding: 3rem;
    letter-spacing: 0rem;
}

.table td, .table th {
    padding: .5rem;
    vertical-align: top;
    border-top: none;
}

thead {
    height: 1px;
}

.table thead th {
    vertical-align: bottom;
    border-bottom: 0px;
    font-weight: 150;
    letter-spacing: 0rem;
    font-size: .75rem;
}

.item-users {
    display: none;
}

.item-id {
    display: none;
}

.item-date {
    width: 10%;
    text-align: left;
    padding-left: 1rem;
}

.item-expense {
    text-align: center;
}

.item-cost {
    width: 1%;
    text-align: center;
}

.item-delete {
    width: 16%;
    text-align: right;
    padding: 9px 0 !important;
    cursor: pointer;
}

.footer {
	font-weight: 100;
	font-size: 0.5rem;
    margin-top: 8rem !important;
    margin-bottom: 8rem !important;
}

/*CALENDAR*/
.ui-widget {
    font-family: Arial,Helvetica,sans-serif;
}
/* ... */

